<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="4"
    android:orientation="vertical"
    tools:context=".MainMenuActivity">

	<Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/menu_old_testament"
        android:onClick="loadOldTestament"/>

	<Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/menu_new_testament"
        android:onClick="loadNewTestament"/>

	<Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/menu_search"
        android:onClick="loadVerseSearch"
        android:clickable="false"/>

	<Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/menu_soap_journal"
        android:onClick="loadSoapJournals"
        android:clickable="false"/>

</LinearLayout>
